# rpc

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .merge_file_a44320  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  CRASH_HANDLER_IMPLEMENTATION.md  LICENSE  MCP_IMPLEMENTATION_GUIDE.md  PROXY_RACE_ANALYSIS.md  QWEN.md  README.md  RPC_REFERENCE_COUNTING_ARCHITECTURE.md  RPC_REFERENCE_COUNTING_EDGE_CASE_ANALYSIS.md  cmake-variants.yaml  conversation.txt  cspell.json  debug_enable_shared_from_this  debug_enable_shared_from_this.cpp  notes_for_v3.md  stress_test_multithreaded.sh  test_level_colors.cpp
generator/: CMakeLists.txt  HOMOGENIZATION_EXAMPLE.md  component_checksum.cpp  component_checksum.h  enclave_marshalling_generator.cpp  enclave_marshalling_generator.h  fingerprint_generator.cpp  fingerprint_generator.h  helpers.cpp  helpers.h  in_zone_synchronous_generator.cpp  in_zone_synchronous_generator.h  interface_declaration_generator.cpp  interface_declaration_generator.h  main.cpp  sha3.c  sha3.h  synchronous_generator.cpp  synchronous_generator.h  synchronous_mock_generator.cpp  synchronous_mock_generator.h  writer.h  yas_generator.cpp  yas_generator.h  yas_stub_generator.cpp
generator/include/: component_checksum.h  fingerprint_generator.h  helpers.h  interface_declaration_generator.h  json_schema_renderer.h  rpc_attributes.h  sha3.h  synchronous_generator.h  synchronous_mock_generator.h  type_utils.h  writer.h  yas_generator.h
generator/include/json_schema/: generator.h  per_function_generator.h  type_utils.h  writer.h
generator/json_schema/: CMakeLists.txt  generated_schema.json  json_schema_generator.cpp  json_schema_generator.h  sample.idl
generator/src/: component_checksum.cpp  fingerprint_generator.cpp  helpers.cpp  interface_declaration_generator.cpp  json_schema_generator.cpp  json_schema_generator.h  json_schema_renderer.cpp  main.cpp  sha3.c  synchronous_generator.cpp  synchronous_mock_generator.cpp  type_utils.cpp  yas_generator.cpp
generator/src/json_schema/: generator.cpp  per_function_generator.cpp  type_utils.cpp
marshaller/: CMakeLists.txt
marshaller/include/marshaller/: enclave_service_proxy.h  error_codes.h  host_service_proxy.h  local_service_proxy.h  marshaller.h  proxy.h  remote_pointer.h  service.h  stub.h
marshaller/src/: enclave_service_proxy.cpp  error_codes.cpp  host_service_proxy.cpp  marshaller.cpp  proxy.cpp  remote_pointer.cpp  service.cpp  stub.cpp
rpc/: CMakeLists.txt
rpc/include/rpc/: assert.h  basic_service_proxies.h  casting_interface.h  coroutine_support.h  error_codes.h  i_telemetry_service.h  logger.h  marshaller.h  member_ptr.h  object_proxy.h  proxy.h  proxy_base.h  proxy_impl.h  remote_pointer.h  rpc.h  rpc_fwd.h  serialiser.h  service.h  service_proxy.h  smart_pointer.h  smart_pointers.h  stub.h  thread_local_logger.h  types.h  version.h
rpc/include/rpc/chatgpt/: memory.h
rpc/include/rpc/coroutine_enclave/: chrono.h  coroutine.h  enclave_fix.h  thread_proxy.h
rpc/interfaces/: CMakeLists.txt
rpc/interfaces/rpc/: rpc_types.idl
rpc/src/: casting_interface.cpp  error_codes.cpp  object_proxy.cpp  pass_through.cpp  proxy.cpp  remote_pointer.cpp  service.cpp  service_proxy.cpp  stub.cpp  thread_local_logger.cpp  transport.cpp  version.cpp
submodules/: CMakeLists.txt
telemetry/: CMakeLists.txt
telemetry/src/: animation_telemetry_service.cpp  console_telemetry_service.cpp  enclave_telemetry_service.cpp  host_telemetry_service.cpp  multiplexing_telemetry_service.cpp  sequence_diagram_telemetry_service.cpp  telemetry_handler.cpp  telemetry_service_factory.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  foo_impl.h  tests.h
tests/common/src/: enclave_service_proxy.cpp  foo_impl.cpp  host_service_proxy.cpp  tcp_channel_manager.cpp  tcp_listener.cpp  tcp_service_proxy.cpp  tests.cpp
tests/edl/: CMakeLists.txt  enclave_marshal_test.edl  rpc_telemetry.edl
tests/fixtures/: CMakeLists.txt
tests/fixtures/include/: crash_handler.h  enclave_setup.h  in_memory_setup.h  inproc_setup.h  rpc_global_logger.h  spsc_setup.h  tcp_setup.h  test_globals.h  test_host.h  test_service_logger.h
tests/fixtures/src/: crash_handler.cpp  rpc_global_logger.cpp  rpc_log.cpp  test_globals.cpp  test_host.cpp  test_service_logger.cpp
tests/fuzz_test/: CMakeLists.txt  DEVELOPMENT_NOTES.md  fuzz_test_main.cpp  replay_failure.sh
tests/idls/: CMakeLists.txt  example_import.idl  example_interface.idl  example_interface2.idl  example_shared.idl
tests/idls/example/: example.idl
tests/idls/example_import/: example_import.idl
tests/idls/example_shared/: example_shared.idl
tests/idls/fuzz_test/: fuzz_test.idl
tests/idls/spsc/: spsc.idl
tests/idls/tcp/: tcp.idl
tests/in_zone_synchronous_generator/: CMakeLists.txt  main.cpp
tests/json_schema_test/: CMakeLists.txt  README.md  i_foo_schema_validation_test.cpp  json_schema_metadata_test.cpp  test_generation_example.md
tests/mcp_test/: CMakeLists.txt  README.md  mcp_metadata_test.cpp  simple_mcp_metadata_test.cpp  test_generation_example.md
tests/memory_tests/: CMakeLists.txt  shared_ptr_tests.cpp
tests/scripts/: stress_test_multithreaded.sh
tests/std_test/: CMakeLists.txt
tests/std_test/include/: crtdbg.h  input_iterator.hpp  is_permissive.hpp  is_permissive_compat.hpp  msvc_compat.hpp  test_death.hpp  test_death_compat.hpp  test_header_units_and_modules.hpp  yvals_core.h
tests/std_test/tests/: CMakeLists.txt  STL_COMPLIANCE_IMPLEMENTATION_NOTES.md  remote_pointer_stl_compliance.md
tests/test_enclave/: CMakeLists.txt  marshal_test_enclave.config.debug.xml  marshal_test_enclave.config.prerelease.xml  marshal_test_enclave.config.release.xml  marshal_test_enclave.cpp  marshal_test_enclave_private.pem
tests/test_host/: CMakeLists.txt  host_telemetry_service.cpp  main.cpp  post_functionality_test_suite.cpp  remote_type_test_suite.cpp  rpc_log.cpp  telemetry_handler.cpp  type_test_fixture.h  type_test_local_suite.cpp  type_test_with_host_suite.cpp
tests/test_host/include/: host_telemetry_service.h
(+180 files in other folders)
